@@ -1,6 +1,8 @@
 
+Germar Reitze fixed a bug where negative BCD values were not properly converted. Thanks Germar!
+
 Fix unnecessary probing bug where a specified device like: /dev/ttyUSB0:im871a:c1
-would still cause wmbusmeters to probe for all types of devices on ttyUSB0.
+and im871a:c1 would still cause wmbusmeters to probe for all types of devices on the serial port(s).
 Now it only probes for im871a which speeds up the startup time significantly.
 
 The sharky774 was improved to handle more different meter configurations.
